chore(spring-kafka): sample setting

--- a/spring-kafka/src/main/resources/application.yml
+++ b/spring-kafka/src/main/resources/application.yml
@@ -1,1 +1,20 @@
 server.port: 8000
+
+spring:
+  application:
+    name: kafka-test
+  kafka:
+    bootstrap-servers: localhost:9092
+    admin:
+      auto-create: false
+    producer:
+      properties:
+        "[connections.max.idle.ms]": 300000
+    consumer:
+      group-id: test-group
+      key-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+      properties:
+        "[partition.assignment.strategy]": org.apache.kafka.clients.consumer.CooperativeStickyAssignor
+        "[spring.deserializer.key.delegate.class]": org.apache.kafka.common.serialization.StringDeserializer
+        "[spring.deserializer.value.delegate.class]": org.apache.kafka.common.serialization.StringDeserializer
