feat(jpa-batch-insert): batch insert 관련 변경사항 테스트 및 문서화

--- a/spring-jpa/jpa-bulk-insert/src/main/resources/application.yml
+++ b/spring-jpa/jpa-bulk-insert/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 spring:
   datasource:
-    url: jdbc:mariadb://localhost/test?createDatabaseIfNotExist=true
+#    url: jdbc:mysql://localhost/test?rewriteBatchedStatements=true&createDatabaseIfNotExist=true&profileSQL=true&logger=Slf4JLogger&maxQuerySizeToLog=99999
+    url: jdbc:mariadb://localhost/test?rewriteBatchedStatements=true&createDatabaseIfNotExist=true
     username: root
     password: 111111
     hikari:
@@ -13,6 +14,3 @@ spring:
       hibernate:
         jdbc:
           batch_size: 100
-logging:
-  level:
-    "[org.mariadb.jdbc]": trace
