feat(jpa): query counting aop (StatementInspector)

--- a/spring-jpa/jpa-core/src/main/resources/application.yml
+++ b/spring-jpa/jpa-core/src/main/resources/application.yml
@@ -17,3 +17,10 @@ spring:
       hibernate:
         show_sql: false
         format_sql: false
+
+  threads:
+    virtual:
+      enabled: true
+
+custom:
+  use-query-counter: true
