feat(spring-ai): build-in advisor

--- a/spring-ai/spring-ai/src/main/resources/application.yml
+++ b/spring-ai/spring-ai/src/main/resources/application.yml
@@ -4,3 +4,7 @@ spring:
   ai:
     openai:
       api-key: ${open-api-key}
+
+logging:
+  level:
+    "[org.springframework.ai.chat.client.advisor]": DEBUG
